# mdown

./: DECISIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
samples/: 01-getting-started.md  02-math-and-science.md  03-diagrams.md  04-code-and-tech.md
src/: App.test.tsx  App.tsx  global.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: fs.rs
src/components/Combiner/: CombinerDialog.tsx  index.ts
src/components/Editor/: Editor.tsx
src/components/Export/: ExportDialog.tsx  index.ts
src/components/Layout/: AppLayout.test.tsx  AppLayout.tsx  ContentArea.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx
src/components/QuickSwitcher/: QuickSwitcher.tsx  index.ts
src/components/Renderer/: Preview.tsx
src/components/Settings/: SettingsPanel.tsx
src/hooks/: useAppInit.ts  useAutoPersist.ts  useFileOpen.ts
src/lib/: export.ts  markdown.test.ts  markdown.ts  tauri-commands.ts
src/store/: index.test.ts  index.ts  persistence.ts
src/templates/: linen.css  scholar.css  slate.css
src/types/: index.ts
src/utils/: wordCount.test.ts  wordCount.ts
