[package]
name = "app"
version = "0.1.0"
description = "MDown — a fast, offline Markdown editor with live preview, math, diagrams, and clean export."
authors = ["q3alique"]
license = "MIT"
repository = "https://github.com/q3alique/mdown"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
notify = { version = "8", features = [] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
